--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
   <div class="top-container">
-    <img class="tc" src="D:\web dev\html personal site\images\cloud.png" alt="cloud-img">
+    <img class="tc" src="cloud.png" alt="cloud-img">
     <h1>I'm Rajat.</h1>
     <h2 class="web">WEB <span class="dev">DEV</span>ELOPER</h2>
-    <img class="bc "src="D:\web dev\html personal site\images\cloud.png" alt="cloud-img">
-    <img src="D:\web dev\html personal site\images\mountain.png" alt="mountain-img">
+    <img class="bc "src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
